--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -59,7 +59,7 @@ body {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  /* :root {
     color: #213547;
     background-color: #ffffff;
   }
@@ -68,7 +68,7 @@ body {
   }
   button {
     background-color: #f9f9f9;
-  }
+  } */
 }
 
 @theme inline {
